@@ -121,7 +121,7 @@ If you're using the <a href="xodtemplate.html">template-based object definition 
 </p>
 
 <p>
-On a similiar note, you can also enable/disable flap detection for specific hosts and services by using the <b>enable_flap_detection</b> directive in each object definition.  Note that flap detection must be enabled on a program-wide basis (using the <a href="configmain.html#enable_flap_detection">enable_flap_detection</a> directive in the main config file) in order for any host or service to have flap detection enabled.
+On a similiar note, you can also enable/disable flap detection for specific hosts and services by using the <b>flap_detection_enabled</b> directive in each object definition.  Note that flap detection must be enabled on a program-wide basis (using the <a href="configmain.html#enable_flap_detection">enable_flap_detection</a> directive in the main config file) in order for any host or service to have flap detection enabled.
 </p>
 
 <p>
